--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
         header,nav,main,footer {width: 80%;
                                 margin: 0 auto;}
 
-        header{ min-height: 8rem;
+        header{ min-height: 15rem;
                 background-color: pink;}
         nav{width: 80%;
             min-height: 7rem;
@@ -65,6 +65,17 @@
         ul li a:hover { background-color: rgb(190, 170, 209);
                         color: rgb(72, 107, 63);
                         transition: 500ms;}
+        
+        header {display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: flex-start;}
+
+        h1, h2, p {width: 50%;
+                    background-color: cadetblue;
+                    margin: 0.2rem;
+                    border: 0.3rem solid green;
+                    text-align: center;}
 
         /*  Codigo pagina en tablet   */
 
