--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
             margin-right: 0;}
         /*  Codigo pagina en desktop   */
 
+        body {padding-top: 7rem;}
+
         header,nav,main,footer {width: 80%;
                                 margin: 0 auto;}
 
@@ -16,9 +18,12 @@
                 background-color: pink;}
         nav{width: 80%;
             min-height: 7rem;
-            background-color: orange;}
+            background-color: orange;
+            position: fixed;
+            top: 0;
+            left: 10%;}
         main{width: 80%;
-            min-height: 20rem;
+            min-height: 60rem;
             background-color: lightblue;
             display: flex;
             justify-content: space-around;
@@ -68,7 +73,7 @@
         
         header {display: flex;}
 
-        header.div {border: 0.2rem solid red;}
+        header.div {border: 0.2rem solid re;}
 
 
         header>div.logo {width: 25%;}
@@ -84,6 +89,20 @@
                     margin: 0.2rem;
                     border: 0.3rem solid green;
                     text-align: center;}
+
+
+
+        section {width: 80%;
+                background-color: chartreuse;
+                min-height: 20rem;
+                border-radius: 0.1rem solid red;
+                display: flex ;}
+        article.mapa {width: 40%;
+                        border: 0.1rem solid red;}
+        article.form {width: 60%;
+                    background-color: darkgray;
+                    min-height: 20rem;
+                    border: 0.1rem solid red;}
 
         /*  Codigo pagina en tablet   */
 
