--- a/style.css
+++ b/style.css
@@ -104,6 +104,11 @@
                     min-height: 20rem;
                     border: 0.1rem solid red;}
 
+
+        footer {background-image: url("img_corporativo/pattern.png");
+                background-size: 12%;
+                background-repeat: repeat-x;}
+
         /*  Codigo pagina en tablet   */
 
         @media screen and (max-width:900px)  {
