--- a/style.css
+++ b/style.css
@@ -22,12 +22,13 @@
             position: fixed;
             top: 0;
             left: 10%;}
-        main{width: 80%;
-            min-height: 60rem;
+
+        main{min-height: 60rem;
             background-color: lightblue;
             display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;}
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            gap: 0.3rem;}
 
         footer{width: 80%;
             min-height: 7rem;
@@ -35,10 +36,13 @@
 
         .ponerBorde{border: 0.3rem solid black;}
 
+        main img {width: 32%;}
+        
+        /* Divs configuracion inicial
         main div {width: 30%;
                 min-height: 5rem;
                 background-color: lightgray;
-                border: 0.2rem solid red;}
+                border: 0.2rem solid red;}  */
 
         .izda{background-color: rgba(101, 187, 187, 0.555);}
         .dcha{background-color: rgba(106, 202, 9, 0.521);}
@@ -113,8 +117,13 @@
 
         @media screen and (max-width:900px)  {
             nav ul {flex-direction: column;}
-            main div {width: 45%;}
+            header {display: none;}
+            main {justify-content: space-between;}
+            main img {width: 45%;}
             body {background-color: aqua;}
+
+            nav {position: static;}
+            body {padding-top: 0;}
 
 
         }
@@ -122,6 +131,7 @@
         /*  Codigo pagina en smartphone   */
         
         @media only screen and (max-width: 602px) {
-            main div {width: 45%;}
+            main {justify-content: center;}
+            main img {width: 45%;}
             body {background-color: blue;}
           }
